--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <link rel="icon" href="favicon.ico" />
+        <title>Code4ce</title>
+    </head>
 
 <body style="background-color: #222222;">
 
